--- a/app/src/main/res/layout-w600dp/app_bar_main.xml
+++ b/app/src/main/res/layout-w600dp/app_bar_main.xml
@@ -19,10 +19,19 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/Theme.OCCPT.PopupOverlay">
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_profile_placeholder"
+                app:civ_border_color="@color/white"
+                app:civ_border_width="2dp" />
+
             <ImageView
                 android:id="@+id/toolbar_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
                 android:src="@drawable/occpt_app_icon_5"
                 android:contentDescription="@string/logo_description" />
 
