--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -115,14 +115,23 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:src="@drawable/facebook_icon"
-                android:layout_margin="8dp" />
+                android:layout_margin="8dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
             <ImageView
                 android:id="@+id/twitter_icon"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:src="@drawable/twitter_icon"
-                android:layout_margin="8dp" />
+                android:layout_margin="8dp"
+                android:layout_marginStart="16dp"
+                app:layout_constraintBottom_toBottomOf="@+id/facebook_icon"
+                app:layout_constraintStart_toEndOf="@+id/facebook_icon"
+                app:layout_constraintTop_toTopOf="@+id/facebook_icon" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
