--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -53,33 +53,34 @@
     </string-array>
 
     <string-array name="carriers_array">
-        <item>AT&amp;T</item>
-        <item>T-Mobile</item>
-        <item>Verizon</item>
-        <item>Sprint</item>
-        <item>Xfinity Mobile</item>
-        <item>Visible</item>
-        <item>TracFone</item>
-        <item>Straight Talk</item>
-        <item>US Cellular</item>
-        <item>Total Wireless</item>
-        <item>Virgin Mobile</item>
-        <item>Simple Mobile</item>
+        <item>Please select your cell phone carrier</item>
         <item>Alltel</item>
+        <item>AT&amp;T</item>
+        <item>Boost Mobile</item>
+        <item>Consumer Cellular</item>
+        <item>Cricket</item>
+        <item>FreedomPop</item>
+        <item>Google Fi</item>
+        <item>H2O Wireless</item>
+        <item>Metro PCS</item>
         <item>Metrotell</item>
-        <item>Republic Wireless</item>
-        <item>Project Fi</item>
-        <item>Page Plus</item>
+        <item>Mint Mobile</item>
         <item>Net10</item>
         <item>Nextel</item>
-        <item>Mint Mobile</item>
-        <item>Metro PCS</item>
-        <item>H2O Wireless</item>
-        <item>Google Fi</item>
-        <item>FreedomPop</item>
-        <item>Cricket</item>
-        <item>Consumer Cellular</item>
-        <item>Boost Mobile</item>
+        <item>Page Plus</item>
+        <item>Project Fi</item>
+        <item>Republic Wireless</item>
+        <item>Simple Mobile</item>
+        <item>Sprint</item>
+        <item>Straight Talk</item>
+        <item>T-Mobile</item>
+        <item>Total Wireless</item>
+        <item>TracFone</item>
+        <item>US Cellular</item>
+        <item>Verizon</item>
+        <item>Virgin Mobile</item>
+        <item>Visible</item>
+        <item>Xfinity Mobile</item>
         <item>Other</item>
     </string-array>
 </resources>
