--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -166,7 +166,8 @@
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@id/country_layout"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintEnd_toEndOf="parent"
+                app:helperText="@string/registration_phone_format_hint">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/phoneEditText"
@@ -317,7 +318,8 @@
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@id/unlicensedProviderCheckbox"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintEnd_toEndOf="parent"
+                app:helperText="@string/registration_username_format_hint">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/usernameEditText"
@@ -335,7 +337,7 @@
                 app:layout_constraintTop_toBottomOf="@id/username_layout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:passwordToggleEnabled="true">
+                app:helperText="@string/registration_password_strength_hint">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/passwordEditText"
